--- a/src/Player.scss
+++ b/src/Player.scss
@@ -15,3 +15,14 @@
     border: 2px solid #000;
     float: left;
 }
+
+.progress-bar {
+    height: 50px;
+    width: calc(100% - 44px);
+    margin-left: 44px;
+    .inner-progress-bar {
+        height: 100%;
+        background: linear-gradient(90deg, #ff00ff, #00ff00);
+        transition: width ease-in 0.2s;
+    }
+}
