initiate branding change

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@
     position: relative;
     margin: 60px auto;
     padding: 10px;
-    background: linear-gradient(270deg, #ff00ff, #00ff00);
+    background: linear-gradient(90deg, #eee, #d3d3d3, #eee);
 }
 
 @keyframes backgroundHopper {
